# sx1280-linux

./: CMakeLists.txt  README.md  RangingCorrection.cpp  RangingCorrection.h  changelog.md  radio.h  sx1280.cpp  sx1280.hpp  sx1280_spi.cpp  sx1280_spi.hpp  sx1280_uart.cpp  sx1280_uart.hpp  test.cpp
cmake/: CPM.cmake
